<resources>
    <string name="app_name" translatable="false">Polyglot Game</string>
    <string name="tv_created_by" translatable="false">created by Yehor NEMOV</string>
    <string name="play_market_url" translatable="false">https://play.google.com/store/apps/details?id=com.egornemov.polyglotgame</string>
    <string name="tv_reset_game">RESET GAME</string>
    <string name="tv_play_again">PLAY AGAIN</string>
    <string name="tv_wait_refresh">Waits too long?\nRefresh.</string>
    <string name="tv_share_with_friends">SHARE WITH FRIENDS</string>
    <string name="quiz_description_first">Listen track and choose the language. This is first of %d.</string>
    <string name="quiz_description_rest">This is %d of %d.</string>
    <string name="quiz_playback_status">PLAYING (%d of %d).</string>
    <string name="score_cheated">I\'m sad that You\'ve skipped some test.\nPlease, play with me again.</string>
    <string name="score_cheated_share">Brainy time killer, and I\'ve failed to get win in it.</string>
    <string name="score_zero_share">I will learn %s this year! Do you know %s?</string>
    <string name="score_polyglot_share">I\'m a NATURAL polyglot. I know %s.\nBet that you aren\'t?</string>
    <string name="score_not_polyglot_share">I\'m NOT a polyglot.\nBet that you are NOT a polyglot too?</string>
    <string name="score_stats">You score is %d minutes %d seconds with detected %d languages.\n</string>
    <string name="score_zero">Just start with %s.</string>
    <string name="score_polyglot">You are a NATURAL polyglot.</string>
    <string name="score_not_polyglot">You are NOT a polyglot.</string>
    <string name="undefined">Undefined</string>
    <string name="tv_card_description">Choose level</string>
    <string name="btn_easy">Easy</string>
    <string name="btn_europe">Europe</string>
    <string name="tv_easy_description">8 languages (Catalan, English, French, German, Greek, Italian, Spanish, Turkish)</string>
    <string name="tv_europe_description">Languages of Europe</string>
    <string name="btn_slavic">Slavic languages</string>
    <string name="btn_germanic">Germanic languages</string>
    <string name="btn_romance">Romance languages</string>
    <string name="tv_slavic_europe_description">Slavic languages of Europe</string>
    <string name="tv_germanic_europe_description">Germanic languages of Europe</string>
    <string name="tv_romance_europe_description">Romance languages of Europe</string>
    <!-- languages -->
    <string name="albanian">Albanian</string>
    <string name="armenian">Armenian</string>
    <string name="azerbaijani">Azerbaijani</string>
    <string name="belarusian">Belarusian</string>
    <string name="bosnian">Bosnian</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="catalan">Catalan</string>
    <string name="croatian">Croatian</string>
    <string name="czech">Czech</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="english">English</string>
    <string name="estonian">Estonian</string>
    <string name="finnish">Finnish</string>
    <string name="french">French</string>
    <string name="georgian">Georgian</string>
    <string name="german">German</string>
    <string name="greek">Greek</string>
    <string name="hungarian">Hungarian</string>
    <string name="icelandic">Icelandic</string>
    <string name="irish">Irish</string>
    <string name="italian">Italian</string>
    <string name="kazakh">Kazakh</string>
    <string name="latvian">Latvian</string>
    <string name="lithuanian">Lithuanian</string>
    <string name="luxembourgish">Luxembourgish</string>
    <string name="macedonian">Macedonian</string>
    <string name="maltese">Maltese</string>
    <string name="moldovan">Moldovan</string>
    <string name="montenegrin">Montenegrin</string>
    <string name="norwegian">Norwegian</string>
    <string name="polish">Polish</string>
    <string name="portuguese">Portuguese</string>
    <string name="romanian">Romanian</string>
    <string name="russian">Russian</string>
    <string name="serbian">Serbian</string>
    <string name="slovak">Slovak</string>
    <string name="slovenian">Slovenian</string>
    <string name="spanish">Spanish</string>
    <string name="swedish">Swedish</string>
    <string name="turkish">Turkish</string>
    <string name="ukrainian">Ukrainian</string>
</resources>