<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textAlignment="center"
            android:layout_margin="16dp"
            android:text="@string/tv_card_description" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:enabled="false"
                android:text="@string/btn_easy" />

            <ProgressBar
                android:translationY="8dp"
                android:id="@+id/pb_easy"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_easy"
            android:text="@string/tv_easy_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:layout_margin="8dp" />

<!--        <Button-->
<!--            android:visibility="gone"-->
<!--            android:id="@+id/btn_gcs_easy"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="24sp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:text="GCS EASY" />-->

<!--        <TextView-->
<!--            android:visibility="gone"-->
<!--            android:id="@+id/tv_gcs_easy"-->
<!--            android:text="GCS EASY"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@android:color/darker_gray"-->
<!--            android:layout_margin="8dp" />-->

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_europe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:enabled="false"
                android:text="@string/btn_europe" />

            <ProgressBar
                android:translationY="8dp"
                android:id="@+id/pb_europe"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_europe"
            android:text="@string/tv_europe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:layout_margin="8dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_slavic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:enabled="false"
                android:text="@string/btn_slavic" />

            <ProgressBar
                android:translationY="8dp"
                android:id="@+id/pb_slavic"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_slavic"
            android:text="@string/tv_slavic_europe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:layout_margin="8dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_germanic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:enabled="false"
                android:text="@string/btn_germanic" />

            <ProgressBar
                android:translationY="8dp"
                android:id="@+id/pb_germanic"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_germanic"
            android:text="@string/tv_germanic_europe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:layout_margin="8dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_romance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:enabled="false"
                android:text="@string/btn_romance" />

            <ProgressBar
                android:id="@+id/pb_romance"
                android:layout_gravity="center"
                android:translationY="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_romance"
            android:text="@string/tv_romance_europe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:layout_margin="8dp" />

<!--        <FrameLayout-->
<!--            android:visibility="gone"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->

<!--            <Button-->
<!--                android:id="@+id/btn_gcs_europe"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="24sp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginBottom="8dp"-->
<!--                android:clickable="false"-->
<!--                android:enabled="false"-->
<!--                android:text="GCS EUROPE" />-->

<!--            <ProgressBar-->
<!--                android:id="@+id/pb_gcs_europe"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content" />-->

<!--        </FrameLayout>-->

<!--        <TextView-->
<!--            android:visibility="gone"-->
<!--            android:id="@+id/tv_gcs_europe"-->
<!--            android:text="GCS EUROPE"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@android:color/darker_gray"-->
<!--            android:layout_margin="8dp" />-->

    </LinearLayout>

</FrameLayout>